<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="ExtraText">
        //header


        <EditText
            android:id="@+id/tvHintSearch"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:hint="@string/hint_search"
            android:padding="10dp"
            app:drawableLeftCompat="@drawable/ic_search_black_24dp" />

        //header
        // 3 hàng menu

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/btn_chaua"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@drawable/box"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="53dp"
                    android:layout_height="53dp"
                    android:src="@drawable/banhmi"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/robotoregular"
                    android:text="@string/m_n_n_s_ng"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_chauau"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/box"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="53dp"
                    android:layout_height="53dp"
                    android:src="@drawable/buatrua"
                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/robotoregular"
                    android:text="@string/m_n_n_tr_a"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_chaumy"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@drawable/box"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="53dp"
                    android:layout_height="53dp"
                    android:src="@drawable/com"
                   />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/robotoregular"
                    android:text="@string/m_n_n_t_i"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>
        </LinearLayout>

        // hang 2

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/btn_banhmi"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@drawable/box"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="53dp"
                    android:layout_height="53dp"
                    android:src="@drawable/thucannhanh"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/robotoregular"
                    android:text="Thức ăn nhanh"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_mipho"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/box"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="53dp"
                    android:layout_height="53dp"
                    android:src="@drawable/mipho"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/robotoregular"
                    android:text="@string/m_ph"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_xienque"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@drawable/box"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="53dp"
                    android:layout_height="53dp"
                    android:src="@drawable/xienque"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/robotoregular"
                    android:text="@string/n_ng"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvMATH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/m_n_n_th_nh_h_nh"
            android:textSize="21sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMonAnTH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_monan" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/freehani"
                android:text="@string/m_n_n_quanh_y"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/robotoregular"
                android:text="@string/xem_t_t_c"
                android:textAlignment="textEnd"
                android:textColor="#000" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_montrangmieng"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp" />


    </LinearLayout>
</ScrollView>